--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,5 @@
 # Root requirements file for Railway deployment
--r master/requirements.txt
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.6
+websockets==12.0
