Search website and grab Magnet link

--- a/watcher/.env.example
+++ b/watcher/.env.example
@@ -7,3 +7,14 @@ WATCH_FOLDER=C:\Audiobooks
 # Admin credentials (same as master server)
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=your_secure_password_here
+
+# ----- Book Searcher Settings -----
+# Audiobook website credentials
+SITE_URL=https://audiobookbay.lu
+SITE_USERNAME=your_email@example.com
+SITE_PASSWORD=your_password_here
+
+# qBittorrent Web UI
+QBITTORRENT_HOST=http://localhost:8080
+QBITTORRENT_USER=your_qbittorrent_username
+QBITTORRENT_PASS=your_qbittorrent_password
